fix z-index nav

--- a/css/style.css
+++ b/css/style.css
@@ -217,6 +217,7 @@ i {
 
 /* nav bar */
 nav {
+  z-index: 10;
   position: fixed;
   top: 0%;
   left: 0%;
